--- a/EchoBot1/appsettings.json
+++ b/EchoBot1/appsettings.json
@@ -1,4 +1,9 @@
 {
   "MicrosoftAppId": "",
-  "MicrosoftAppPassword": ""
+  "MicrosoftAppPassword": "",
+  "ScmType": "None",
+
+  "QnAKnowledgebaseId": "4822e6dc-8895-43fb-abb1-6bd38e6dace5",
+  "QnAAuthKey": "04ba3642-46dc-444f-9d7d-a9c45459e0d9",
+  "QnAEndpointHostName": "https://qna-maker-20200617.azurewebsites.net/qnamaker"
 }
